# Cyphon

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/Characters/Base/: ybot-idle-test2.glb
saves/: save0.txt  save1.txt
src/: GameState.cpp  GameState.h  main.cpp
src/Colors/: Colors.cpp  Colors.h
src/Entities/: Enemy.cpp  Enemy.h  Projectile.cpp  Projectile.h
src/Gameplay/: ThirdPersonController.cpp  ThirdPersonController.h
src/Global/: GameScreen.cpp  GameScreen.h
src/SaveFunctions/: SaveSystem.cpp  SaveSystem.h
src/Screens/: CreateAvatar.cpp  CreateAvatar.h  MainMenu.cpp  MainMenu.h  NewAvatar.cpp  NewAvatar.h  SKLScreen.cpp  SKLScreen.h  Sandbox.cpp  Sandbox.h  StartMenu.cpp  StartMenu.h
src/Types/: GameScreen.h  SaveData.h
src/UI/: Helpers.cpp  Helpers.h
